               removed from the argument list to allow a more flexible
               handling (e.g. changing only one parameter at time) and
               to clean up the argument list. However, the argument
               work still as excpected (#145),

             • reformat of rejection criteria output to allow easier
               further treatment,

             • minor bug fixes (e.g., not properly caluculated TL curve
               resolution) and graphical adjustements.

         • ‘Analyse_SAR.OSLdata()’:

             • Error message implemented for non OSL data sets (#130,
               Georgina King),

             • Added argument ‘dtype’ to provide further curve
               limitation options,

             • minor code polishing.

         • ‘calc_AliquotSize()’:

             • new argument ‘plot’ (logical): option to (dis-)allow
               plotting of the Monte Carlo estimation,

             • argument ‘MC.estimate’ was renamed to ‘MC’,

             • new structure of the returned ‘RLum.Results’ object,
               containing the elements 'summary', 'args', 'call' and
               'MC'.

             • plotting now done by ‘plot_RLum.Results()’.

         • ‘calc_CentralDose()’:

             • removed argument ‘sample.id’,

             • removed argument ‘print.iterations’,

             • renamed argument ‘input.data’ to ‘data’,

             • new argument ‘'...'’, which is checked for arguments
               ‘verbose’ (logical) and ‘trace’ (logical) to (dis-)allow
               (extended) console output,

             • new structure of the returned ‘RLum.Results’ object,
               containing the elemennts 'summary', 'data', 'args',
               'call' and 'profile',

             • fixed a bug that occured for non-dispersed data sets and
               resulted in a virtually infinite loop using up all
               available memory,

             • plotting now done by

             • plot_RLum.Results().
