@@ -146,6 +146,9 @@ Changes in version 0.4.0 (XX XXXX, 2014):
              • reformat of rejection criteria output to allow easier
                further treatment,
 
+             • support graphical output of rejection criteria and IRSL
+               curve (if exists),
+
              • minor bug fixes (e.g., not properly caluculated TL curve
                resolution) and graphical adjustements.
 
